--- a/package.json
+++ b/package.json
@@ -6,23 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push":"npx drizzle-kit push",
+    "db:studio":"npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "22.15.30",
     "@types/react": "19.1.6",
+    "dotenv": "^16.5.0",
+    "drizzle-kit": "^0.31.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "5.8.3"
