--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.21.0",
+    "@clerk/nextjs": "^6.23.1",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
@@ -20,6 +21,7 @@
     "drizzle-orm": "^0.44.2",
     "emoji-picker-react": "^4.12.2",
     "lucide-react": "^0.513.0",
+    "moment": "^2.30.1",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
