--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "emoji-picker-react": "^4.12.2",
     "lucide-react": "^0.513.0",
     "moment": "^2.30.1",
+    "motion": "^12.19.2",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -29,7 +30,7 @@
     "react-hot-toast": "^2.5.2",
     "recharts": "^3.0.2",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "ws": "^8.18.2"
   },
   "devDependencies": {
